--- a/dist.ini
+++ b/dist.ini
@@ -15,6 +15,7 @@ no_AutoPrereq      = 1
 
 [Prereqs / Runtime]
 Object::Pluggable = 0
+POE               = =
 
 [Prereqs / BuildRequires]
 Test::More        = 0
