Fix POE dependency

--- a/dist.ini
+++ b/dist.ini
@@ -15,7 +15,7 @@ no_AutoPrereq      = 1
 
 [Prereqs / Runtime]
 Object::Pluggable = 0
-POE               = =
+POE               = 0
 
 [Prereqs / BuildRequires]
 Test::More        = 0
